caleb_messerly_project_1/log/build_2024-09-16_17-54-38/webots_ros2_homework1_python/stderr.log
  File "/home/cjmes/f24_robotics/webots_ros2_homework1_python/install/webots_ros2_homework1_python/lib/python3.10/site-packages/webots_ros2_homework1_python/webots_ros2_homework1_python.py", line 138
    else
        ^
SyntaxError: expected ':'

